--- a/HTML5-JS_REST_CLIENT_Blueprints-2/src/main/resources/static/index.html
+++ b/HTML5-JS_REST_CLIENT_Blueprints-2/src/main/resources/static/index.html
@@ -33,9 +33,11 @@
         <label for="input-autor">Author: </label>
         <input type="text" id="input-autor" class="form-control" placeholder="Enter author name">
         <button id="btn-get-blueprints" class="btn btn-success">Get blueprints</button>
-        <button id="btn-switch-api" class="btn btn-warning">Using: apimock</button>
+        <button id="btn-switch-api" class="btn btn-warning">Using: apiclient</button>
+        <button id="btn-add" class="btn btn-success">+ New blueprint</button>
     </div>
 
+    <div id="add-form-container" class="form-inline text-center" style="margin-top: 20px;"></div>
 
     <h3 id="autor-seleccionado" class="mt-3"></h3>
 
